Fix z-index for "spotify-height-350"

--- a/spotify/css/style.css
+++ b/spotify/css/style.css
@@ -45,6 +45,8 @@
     left: 0;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: auto;
+    z-index: 1;
 }
 
 .logo-large img {
@@ -296,6 +298,7 @@ main h4 {
     height: 60px;
     background-color: var(--footer-bg);
     justify-content: space-between;
+    z-index: 2;
 }
 
 footer {
